nzgonjanin-Dreamforce2012/src/objects/AddtoCampaignsSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Used for Cloudspokes app Add To Campaigns to define Variables used to filter available Campaigns for selection.</description>
    <fields>
        <fullName>Header_Subtitle__c</fullName>
        <defaultValue>&quot;Add to Campaigns&quot;</defaultValue>
        <description>value of page subtitle
&lt;apex:sectionHeader title=&quot;Cloudspokes&quot; subtitle=&quot;Add to Campaigns&quot;/&gt;</description>
        <inlineHelpText>value of page subtitle
&lt;apex:sectionHeader title=&quot;Cloudspokes&quot; subtitle=&quot;Add to Campaigns&quot;/&gt;</inlineHelpText>
        <label>Header Subtitle</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ListViewId__c</fullName>
        <description>List View used to filter Campaigns offered for selection.
The database ID of the desired list view. When editing a list view definition, this ID is the 15-character string after &apos;fcf=&apos; in the browser&apos;s address bar.</description>
        <inlineHelpText>The database ID of the desired list view. When editing a list view definition, this ID is the 15-character string after &apos;fcf=&apos; in the browser&apos;s address bar.</inlineHelpText>
        <label>ListViewId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <defaultValue>&quot;Note: Disabled campaigns are already in use by Participant.&quot;</defaultValue>
        <description>value of Note section under Select Campaigns pageBlockSection
&lt;b&gt;Note: &lt;/b&gt; Disabled campaigns are already in use by Participant.</description>
        <inlineHelpText>value of Note section under Select Campaigns pageBlockSection
&lt;b&gt;Note: &lt;/b&gt; Disabled campaigns are already in use by Participant.</inlineHelpText>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RecordSet_Limit__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Max number of records retreived by query for selection  Max=10000</description>
        <inlineHelpText>Max number of records retreived by query for selection  Max=10000</inlineHelpText>
        <label>RecordSet Limit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>button_Back_Label__c</fullName>
        <defaultValue>&quot;Back&quot;</defaultValue>
        <description>value of label for button Back
&lt;apex:commandButton id=&quot;Back&quot; action=&quot;{!GoToParticipant}&quot;&gt;</description>
        <inlineHelpText>value of label for button Back
&lt;apex:commandButton id=&quot;Back&quot; action=&quot;{!GoToParticipant}&quot;&gt;</inlineHelpText>
        <label>button Back Label</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>button_SelectAll_Label__c</fullName>
        <defaultValue>&quot;Select All&quot;</defaultValue>
        <description>value of label for button Select All
&lt;apex:commandButton id=&quot;SelectAll&quot; action=&quot;{!SelectAll}&quot;&gt;</description>
        <inlineHelpText>value of label for button Select All
&lt;apex:commandButton id=&quot;SelectAll&quot; action=&quot;{!SelectAll}&quot;&gt;</inlineHelpText>
        <label>button SelectAll Label</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>button_Submit_Label__c</fullName>
        <defaultValue>&quot;Submit&quot;</defaultValue>
        <description>value of label for button Submit 
&lt;apex:commandButton id=&quot;Submit&quot; action=&quot;{!Submit}&quot; &gt;</description>
        <inlineHelpText>value of label for button Submit 
&lt;apex:commandButton id=&quot;Submit&quot; action=&quot;{!Submit}&quot; &gt;</inlineHelpText>
        <label>button Submit Label</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>column_EndDate_Header__c</fullName>
        <defaultValue>&quot;End Date&quot;</defaultValue>
        <description>value of header for column End Date
&lt;apex:facet name=&quot;header&quot; id=&quot;EndDate&quot;&gt;</description>
        <inlineHelpText>value of header for column End Date
&lt;apex:facet name=&quot;header&quot; id=&quot;EndDate&quot;&gt;</inlineHelpText>
        <label>column EndDate Header</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>column_Name_Header__c</fullName>
        <defaultValue>&quot;Name&quot;</defaultValue>
        <description>value of header for column Name</description>
        <inlineHelpText>value of header for column Name</inlineHelpText>
        <label>column Name Header</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>column_Parent_Label__c</fullName>
        <defaultValue>&quot;Parent&quot;</defaultValue>
        <label>column Parent Label</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>column_RecordType_Label__c</fullName>
        <defaultValue>&quot;Record Type&quot;</defaultValue>
        <label>column RecordType Label</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>column_Select_Header__c</fullName>
        <defaultValue>&quot;Select&quot;</defaultValue>
        <description>value of header for Column Select</description>
        <inlineHelpText>value of header for Column Select</inlineHelpText>
        <label>column Select Header</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>column_StartDate_Header__c</fullName>
        <defaultValue>&quot;Start Date&quot;</defaultValue>
        <description>value of header for column Start Date
&lt;apex:facet name=&quot;header&quot; id=&quot;Name&quot; &gt;</description>
        <inlineHelpText>value of header for column Start Date
&lt;apex:facet name=&quot;header&quot; id=&quot;Name&quot; &gt;</inlineHelpText>
        <label>column StartDate Header</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>column_Status_Header__c</fullName>
        <defaultValue>&quot;Status&quot;</defaultValue>
        <description>value of header for column Status
&lt;apex:facet name=&quot;header&quot; id=&quot;Status&quot;&gt;</description>
        <inlineHelpText>value of header for column Status
&lt;apex:facet name=&quot;header&quot; id=&quot;Status&quot;&gt;</inlineHelpText>
        <label>column Status Header</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>column_Type_Header__c</fullName>
        <defaultValue>&quot;Type&quot;</defaultValue>
        <description>value of header for column Type
&lt;apex:facet name=&quot;header&quot; id=&quot;Type&quot;&gt;</description>
        <inlineHelpText>value of header for column Type
&lt;apex:facet name=&quot;header&quot; id=&quot;Type&quot;&gt;</inlineHelpText>
        <label>column Type Header</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>link_FilterSetting_Label__c</fullName>
        <defaultValue>&quot;Filter Setting&quot;</defaultValue>
        <description>value of label for link FilterSetting
&lt;apex:commandLink id=&quot;FilterSetting&quot; action=&quot;{!FilterSetting}&quot;&gt;</description>
        <inlineHelpText>value of label for link FilterSetting
&lt;apex:commandLink id=&quot;FilterSetting&quot; action=&quot;{!FilterSetting}&quot;&gt;</inlineHelpText>
        <label>link FilterSetting Label</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>message_Error__c</fullName>
        <defaultValue>&quot;Sorry, Problem to record selected data. Contact your administrator.\n\r Error: &quot;</defaultValue>
        <description>Message displayed if DML error come up and submission is not sucessfull</description>
        <inlineHelpText>Message displayed if DML error come up and submission is not sucessfull</inlineHelpText>
        <label>message_Error</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>message_Success__c</fullName>
        <defaultValue>&quot;&apos;You have sucessfuly add participant to campaign(s)&quot;</defaultValue>
        <description>INFO Message displayed after sucessfull submision.</description>
        <inlineHelpText>INFO Message displayed after sucessfull submision.</inlineHelpText>
        <label>message_Success</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>message_Validation__c</fullName>
        <defaultValue>&quot;Select at list one campaign before Submit, please. &quot;</defaultValue>
        <description>Validation error displayed if user heva not selected any campaign.</description>
        <inlineHelpText>Validation error displayed if user heva not selected any campaign.</inlineHelpText>
        <label>message_Validation</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pageBlockSection_Campaigns__c</fullName>
        <defaultValue>&quot;Campaigns Selection&quot;</defaultValue>
        <description>value of title for
&lt;apex:pageBlockSection title=&quot;Campaigns Selection&quot;&gt;</description>
        <inlineHelpText>value of title for
&lt;apex:pageBlockSection title=&quot;Campaigns Selection&quot;&gt;</inlineHelpText>
        <label>pageBlockSection Campaigns</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pageBlockSection_Contact__c</fullName>
        <defaultValue>&quot;Campaign Member - Contact&quot;</defaultValue>
        <description>value of title for
&lt;apex:pageBlockSection title=&quot;Campaign Member - Contact&quot;&gt;</description>
        <inlineHelpText>value of title for
&lt;apex:pageBlockSection title=&quot;Campaign Member - Contact&quot;&gt;</inlineHelpText>
        <label>pageBlockSection Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pageBlockSection_Lead__c</fullName>
        <defaultValue>&quot;Campaign Member - Lead&quot;</defaultValue>
        <description>value of title for
&lt;apex:pageBlockSection title=&quot;Campaign Member - Lead&quot;&gt;</description>
        <inlineHelpText>value of title for
&lt;apex:pageBlockSection title=&quot;Campaign Member - Lead&quot;&gt;</inlineHelpText>
        <label>pageBlockSection Lead</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Add to Campaigns Setting</label>
</CustomObject>